--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"setup": "npm i && cd client && npm i",
-	"dev": "cd client && npm start",
-	"build": "cd client && npm run build",
-	"start": "node ."
+    "setup": "npm i && cd client && npm i",
+    "dev": "cd client && npm start",
+    "build": "cd client && npm run build",
+    "start": "npm run build && node ."
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   },
   "author": "",
   "license": "UNLICENSED",
-  "homepage": "https://bitbucket.org/trszdev/web-dhtml#readme"
+  "homepage": "https://bitbucket.org/trszdev/web-dhtml#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4"
+  }
 }
